# Internship

./: .gitignore  app.py  docker-compose-task1.yml  requirements.txt
Embedding-models/: audioEmbedding.py  bert.py  elmo.py  gemini_embedding.py  multilingual.py  pyproject.toml  same_speaker_identity_recognition.py  sbert.py  speechbrain_model.py  tfidf.py  waveLM.py  word2vec.py
Embedding-models/Google_embedding_2/: deatils.md  embed.py
Embedding-models/pretrained_models/spkrec-ecapa-voxceleb/: hyperparams.yaml
Embedding-models/services/: record_audio.py
FastAPI_Concepts/Pg_vectors/: .env.example  config.py  main.py  requirements.txt
FastAPI_Concepts/Pg_vectors/core/: db.py
FastAPI_Concepts/Pg_vectors/models/: document.py
FastAPI_Concepts/Pg_vectors/services/: embeddings.py  pg_vector_service.py
FastAPI_Concepts/api_http_headers/: config.py  main.py
FastAPI_Concepts/api_http_headers/core/: db.py
FastAPI_Concepts/api_http_headers/models/: api_keys.py  tenants.py
FastAPI_Concepts/api_http_headers/schemas/: tanents.py
FastAPI_Concepts/webhooks_demo/: main.py
IDEcontext/: .env.example  .gitignore  README.md  pyproject.toml
IDEcontext/.cursor/: mcp.json
IDEcontext/src/openclaw/: agent.py  cli.py  config.py  heartbeat.py  llm.py  logger.py  mcp_server.py  memory.py  models.py  server.py  skills.py  workspace.py
IDEcontext/src/openclaw/adapters/: slack_adapter.py  telegram_adapter.py  webhook.py  whatsapp_adapter.py
IDEcontext/src/openclaw/skills_bundled/: file_management.md  github.md
IDEcontext/src/openclaw/tools/: builtins.py  registry.py
IDEcontext/tests/: test_config.py  test_mcp.py  test_tools.py
MCP/: demo.py
MCP/fastMCPdemo/: client.py  pyproject.toml  server.py
Speakers_Identification/ReDemNet2_Model/: main.py
auto-attendence/: attendece.py
bs-extra-files/: check_bank_statement.py  data.json  gen_ai_llm.py  models.txt  new_response.json  response.json
contextMCP/: clawsync_init.py  clawsync_mcp.py  clawsync_watcher.py
docker-demo/: .gitignore  EXEC_COMMANDS.md  README.md  RUN_INSTRUCTIONS.md  docker-compose.yml
docker-demo-postgres/: README.md  docker-compose.yml
docker-demo-postgres/backend/: Dockerfile  main.py
docker-demo-postgres/frontend/: nginx.conf  package.json
docker-demo-postgres/frontend/public/: index.html
docker-demo/backend/: .dockerignore  Dockerfile  main.py
docker-demo/frontend/: Dockerfile
docling-pdf-parser/: README.md  main.py  requirements.txt  table_1.csv  table_2.csv  table_3.csv  table_4.csv  table_5.csv
docling-pdf-parser/outputs/: GETCO E 312 AT-17-21_20260515T132842Z_8ec5a531f4e14165b5e375ce94659946.json  Hotel Bill D_20260515T120035Z_39595638caed408b9883d5ab691ec287.json  Hotel Bill D_20260515T120359Z_d0934b11044748c1826d92f23e116c64.json  Hotel Bill D_20260515T120359Z_e9502e0a4d104692832a1f24c2cecead.json  LFTA- 5_20260515T114458Z_3404915ebcf24e1f8038dbc3babb0863.json  LFTA- 5_20260515T114458Z_42a8a10da6eb4e22a6bea207c9bd9804.json  LFTA- 5_20260515T125750Z_29649b396df24978b03bdfbbbcf20e5c.json  LOI E-312 11Kv Reactor_20260515T111603Z_4ecec312e62a4b46a2b1fabef7589cc9.json  LOI E-312 11Kv Reactor_20260515T112155Z_27d64d70d1f843c7867502be1712a100.json  LOI E-312 11Kv Reactor_20260515T124109Z_a0b23da755f447739e1494704ffbcb25.json  Lalji Sankhat_Training Completion.docx_20260515T130630Z_ab56ab451c6e4d92ba460feda7dd1139.json  SEPL (3)_20260515T134149Z_43932af0f1664f2fa9eefd5dc49124a4.json  Screenshot from 2026-03-26 12-18-33.json  Screenshot from 2026-04-21 10-56-31.json  Urbanpointe_SOP_20260515T123041Z_8702a44192254bf587023ed24674e651.json  Urbanpointe_SOP_20260515T130318Z_7c5bb96f811744d882b81b99a3ea5e93.json  admin_20260515T122351Z_f4a8ca6f187544c2b2b6b16dbe27f54c.json  bike-digi2_20260515T120931Z_f8cad2c90dfe4f249f7e7c13ea0218b9.json  hotel bill-D-3_20260515T125207Z_917fc066a31549dc824eeedbed570d4c.json  train-ticket-1_20260515T121315Z_d0de131dfe9947bf85f4c0eb2133d377.json  train-ticket-1_20260515T121639Z_4106fc6a51ed4cde8cfabb581d90f602.json  train-ticket-1_20260515T122119Z_07347e92650142fa8e05faa42748b141.json
docling-pdf-parser/services/: docling_examples.py  docling_parser.py
docling-pdf-parser/specs/: Docling_Document_Parsing_Guide.docx
docling-pdf-parser/tests/: run_examples.py  run_parser_example.py  run_service_examples.py
langchain-langgraph/: pyproject.toml
langchain-langgraph/services/: langChainDemo.py  langGraphDemo.py  langchain_2.py
poetry-demo/: pyproject.toml
poetry-demo/src/poetry_demo/: app.py
pytorch/: 01_tensors.ipynb
sdk/: glmModels.py  groq-file.py  hf-new.py  hf.py  litellm_demo.py  llm.py  main.py
sdk/Zai_sdk/: main.py  requirements.txt
sdk/aisuite_demo/: main.py  requirements.txt
semanticChunking/: chunk_full_text.py  docker-compose.yml  know.md  pyproject.toml  sect_chunk.py  simple_sem_chunkk.py  test.py
semanticChunking/tests/: test_semanticchunking.py
test-app/: Dockerfile
test-app/app/: main.py
tool-calling/: main.py  pyproject.toml
tool-calling/services/: analyse_pdf_tool.py  bd.py  bdnew.py  bdoptimised.py  bdseventool.py  bodmas.py  get_joke.py  get_weather_tool_calling.py  send_mail.py
vector-db/: pyproject.toml
vector-db/chroma-db/: commands.md  main.py  models.py  pyproject.toml
vector-db/chroma-db/services/: chroma_db_config.py
vector-db/faiss-db/: commands.md  main.py  models.py  pyproject.toml
vector-db/faiss-db/services/: embeddings.py  faiss_config.py  faiss_store.py
vector-db/faiss-db/vectorstore/faiss_index/: meta.pkl
vector-db/milvus-db/: docker-compose.yml  main.py  requirements.txt
vector-db/milvus-db/services/: embedding_service.py  milvus_service.py
vector-db/qdrant-db/: models.py  pyproject.toml  qdrant.py
vector-db/qdrant-db/services/: embeddings.py
vector-db/zvec_db/: Dockerfile  demo.py  docker-compose.yml
voice-agent/: .env.example  INTEGRATION.md  QUICKSTART.md  README.md  fix_dependencies.sh  requirements.txt  run_server.py  setup.sh
voice-agent/client/: web_client.html
voice-agent/server/: personaplex_server.py  voice_call_handler.py
voice-agent/utils/: audio_utils.py
(+5 files in other folders)
