[project]
name = "langchain-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "LaljiSankhat03",email = "laljis@webelight.co.in"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langgraph (>=1.0.6,<2.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "langchain (>=1.2.4,<2.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-groq (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "langchain_langgraph", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
