[project]
name = "tool-calling"
version = "0.1.0"
description = ""
authors = [
    {name = "LaljiSankhat03",email = "laljis@webelight.co.in"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "litellm (>=1.80.11,<2.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "uuid (>=1.30,<2.0)",
    "simpleeval (>=1.0.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tool_calling", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
