[project]
name = "vector-db"
version = "0.1.0"
description = ""
authors = [
    {name = "LaljiSankhat03",email = "laljis@webelight.co.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb (>=1.4.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "vector_db", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
